# nlp-jp-gears

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
nlp_jp_gears/: __init__.py  composer.py  remover.py  utils.py  zenhan.py
scripts/: test.sh
tests/: test_composer.py  test_nlp_jp_gears.py  test_remover.py  test_zenhan.py
