[tool.poetry]
name = "nlp-jp-gears"
version = "0.1.1"
description = ""
license = "MIT"
authors = ["Tokusumi"]
readme = 'README.md'

repository = "https://github.com/tokusumi/nlp-jp-gears"

keywords = ['nlp', 'japanese']

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
